# mtvserverrust

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  install.py  mtvserverrust.service
src/: envvars.rs  lib.rs  main.rs  player.rs  servermov.rs  servertvs.rs  serverutils.rs  setup.rs
src/setup/: cleanmeta.rs  envvars.rs  misc.rs  mtvimageops.rs  mtvmp3.rs  mtvwalkdirs.rs  splitstrings.rs
